gcc/testsuite/rust/rustc/ui/issues/issue-16250.rs
#![deny(warnings)]

pub struct Foo;

extern {
    pub fn foo(x: (Foo)); // { dg-error "" "" { target *-*-* } }
}

fn main() {
}

